--- a/Testscript/Dockerfile
+++ b/Testscript/Dockerfile
@@ -1,1 +1,11 @@
+# Apply the configuration to deploy the services:
 
+kubectl apply -f backend-deployment.yaml
+kubectl apply -f frontend-deployment.yaml
+
+
+# expose the frontend service and access it via Minikube's service URL:
+minikube service frontend
+
+# Install Cypress:
+npm install cypress --save-dev
